--- a/compose.yaml
+++ b/compose.yaml
@@ -14,7 +14,10 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./website/static/data/:/app/website/static/data/
+      - projectVol:/app/website/static/data
+
+volumes:
+  projectVol:
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
